--- a/android-rest-client-template-master/AndroidManifest.xml
+++ b/android-rest-client-template-master/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:name="com.codepath.apps.basic.twitter.TimelineActivity"
             android:label="@string/title_activity_timeline" >
         </activity>
+        <activity
+            android:name="com.codepath.apps.basic.twitter.ComposeActivity"
+            android:label="@string/title_activity_compose" >
+        </activity>
     </application>
 
 </manifest>
